--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             /></a>
           </li>
           <li class="twitter">
-            <a href="https://twitter.com/rocketseat" target="_blank">
+            <a href="https://twitter.com/jaopaulo0__0?t=vGHvDwwBSRS6A0PmzNXlFA&s=09" target="_blank">
               <img src="images/twitter.svg" alt="ícone twitter"
             /></a>
           </li>
