--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             /></a>
           </li>
           <li class="instagram">
-            <a href="https://instagram.com/joaopauloo0__0/" target="_blank">
+            <a href="https://instagram.com/joaopauloo0_0/" target="_blank">
               <img src="images/instagram.svg" alt="ícone instagram"
             /></a>
           </li>
